src/test/ui/error-codes/E0301.nll.stderr
error[E0301]: cannot mutably borrow in a pattern guard
  --> $DIR/E0301.rs:4:19
   |
LL |         option if option.take().is_none() => {}, //~ ERROR E0301
   |                   ^^^^^^ borrowed mutably in pattern guard
   |
   = help: add #![feature(bind_by_move_pattern_guards)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0301`.
